feat: java特性类com.syd.java17.test.main